--- a/options.html
+++ b/options.html
@@ -13,6 +13,10 @@
   <script src="js/jquery-ui.min.js"></script>
   <script src="js/defaults.js"></script>
   <script src="js/options.js"></script>
+  <script src="js/annyang-min.js"></script>
+  <script src="js/mic-permissions.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/SpeechKITT/1.0.0/speechkitt.min.js"></script>
+
 </head>
 <body>
   <h1 data-i18n="options_heading"></h1>
