--- a/options.html
+++ b/options.html
@@ -15,7 +15,7 @@
   <script src="js/options.js"></script>
   <script src="js/annyang-min.js"></script>
   <script src="js/speech.js"></script>
-  <script src="js/mic-permissions.js"></script>
+  <script src="js/permission-trigger.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/SpeechKITT/1.0.0/speechkitt.min.js"></script>
 
 </head>
